[gd_scene load_steps=4 format=3 uid="uid://bp2d6dstu20qv"]

[ext_resource type="Script" path="res://menu_death/menu_death.gd" id="1_3gct1"]
[ext_resource type="LabelSettings" uid="uid://cis5gl5fytx10" path="res://menu_death/pico8_label_settings.tres" id="1_wbip0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbo0a"]

[node name="MenuDeath" type="PanelContainer" node_paths=PackedStringArray("start_again_select_label", "quit_select_label", "you_cant_go_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tbo0a")
script = ExtResource("1_3gct1")
start_again_select_label = NodePath("Control/CenterContainer2/HBoxContainer/SelectLabel")
quit_select_label = NodePath("Control/CenterContainer3/HBoxContainer/SelectLabel")
you_cant_go_label = NodePath("Control/CenterContainer4/YouCantGoLabel")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.667

[node name="YouAreDeadLabel" type="Label" parent="Control/CenterContainer"]
layout_mode = 2
text = "YOU ARE DEAD,
NOT BIG SURPRISE"
label_settings = ExtResource("1_wbip0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer4" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="YouCantGoLabel" type="Label" parent="Control/CenterContainer4"]
visible = false
layout_mode = 2
text = "you cant go..."
label_settings = ExtResource("1_wbip0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.333
anchor_right = 0.667
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer2"]
layout_mode = 2

[node name="SelectLabel" type="Label" parent="Control/CenterContainer2/HBoxContainer"]
layout_mode = 2
text = " "
label_settings = ExtResource("1_wbip0")

[node name="StartAgainLabel" type="Label" parent="Control/CenterContainer2/HBoxContainer"]
layout_mode = 2
text = "start
again"
label_settings = ExtResource("1_wbip0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer3"]
layout_mode = 2

[node name="SelectLabel" type="Label" parent="Control/CenterContainer3/HBoxContainer"]
layout_mode = 2
text = " "
label_settings = ExtResource("1_wbip0")

[node name="QuitLabel" type="Label" parent="Control/CenterContainer3/HBoxContainer"]
layout_mode = 2
text = "quit"
label_settings = ExtResource("1_wbip0")

[node name="NoQuitTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="NoQuitTimer" to="." method="noquit_timer_finished"]
